potential fix for moving header on ios

--- a/app/assets/stylesheets/partials/_index.scss
+++ b/app/assets/stylesheets/partials/_index.scss
@@ -42,8 +42,9 @@ body {
   background: image-url("glitch.gif") no-repeat center 10px fixed;
   background-size: cover;
   @media (max-width: 740px) {
-    background: "";
     background-color: $mainBackground;
+    overflow:hidden;
+    -webkit-overflow-scrolling:touch;
   }
   margin: 0 auto;
 }
